--- a/research/index.html
+++ b/research/index.html
@@ -15,22 +15,61 @@
     .markdown-section h1 {
       color: var(--theme-color);
     }
+    /* Language switcher in navbar */
+    .app-nav {
+      position: fixed;
+      top: 0;
+      right: 0;
+      z-index: 100;
+      padding: 10px 20px;
+    }
+    .app-nav a {
+      padding: 5px 10px;
+      border-radius: 4px;
+      margin-left: 5px;
+      text-decoration: none;
+      color: var(--theme-color);
+      border: 1px solid var(--theme-color);
+      font-size: 14px;
+    }
+    .app-nav a:hover {
+      background: var(--theme-color);
+      color: white;
+    }
   </style>
 </head>
 <body>
+  <nav class="app-nav">
+    <a href="#/ru/">🇷🇺 RU</a>
+    <a href="#/en/">🇺🇸 EN</a>
+  </nav>
   <div id="app">Загрузка...</div>
   <script>
     window.$docsify = {
       name: '🦊 KidChess Research',
       repo: '',
       loadSidebar: true,
+      loadNavbar: false,
       subMaxLevel: 3,
       auto2top: true,
-      search: {
-        placeholder: 'Поиск...',
-        noData: 'Ничего не найдено',
-        paths: 'auto'
+
+      // Default to Russian
+      homepage: '/ru/README.md',
+
+      // Alias for clean URLs
+      alias: {
+        '/ru/(.*)': '/ru/$1',
+        '/en/(.*)': '/en/$1',
+        '/': '/ru/README.md'
       },
+
+      search: {
+        placeholder: 'Search / Поиск...',
+        noData: 'No results / Ничего не найдено',
+        paths: 'auto',
+        pathNamespaces: ['/ru', '/en']
+      },
+
       themeColor: '#4CAF50'
     }
   </script>
